--- a/w3.BFS/BOJ(2178_미로 탐색)/미로탐색.md
+++ b/w3.BFS/BOJ(2178_미로 탐색)/미로탐색.md
@@ -100,30 +100,32 @@ N×M크기의 배열로 표현되는 미로가 있다.
 ## CODE
 
 ```python
-dx = [1, -1, 0, 0]					# x 이동
-dy = [0, 0, -1, 1]					# y 이동
+dx = [1, -1, 0, 0]  
+dy = [0, 0, -1, 1]  
 
 # input
-n, m = map(int, input().split())	# N,M input으로 받기				
-s = []								# 미로 행렬
-for i in range(n):					
-    s.append(list(input()))			# int로 변환하지 않음
+n, m = map(int, input().split())			
+s = [list(map(int,input())) for _ in range(n)]#1
 
 
 def bfs(s):
-    queue = [[0, 0]]					# queue 초기값 지정
-    s[0][0] = 1							# 시작점 방문 표시
-	while queue:						# 큐가 빌 때까지
-    	a, b = queue[0][0], queue[0][1]	# a,b할당->초기값 0,0에서 시작
-    	del queue[0]					
-    	for i in range(4):				# 오른쪽,왼쪽,위,아래 경우의 수
-        	x = a + dx[i]				# x좌표 이동
-        	y = b + dy[i]				# y좌표 이동
-        	if 0 <= x < n and 0 <= y < m and s[x][y] == "1":	# 이동한 좌표가 통행가능일 경우
-            	queue.append([x, y])	# 해당 좌표를 queue에 추가-탐색할 위치
-            	s[x][y] = s[a][b] + 1	# 이동+1 count
-	return s[n - 1][m - 1]	#(n,m)에 도착하기까지 최소 경로
+    queue = [[0, 0]]#2  
+    s[0][0]=1   
+    while queue:    
+        a, b = queue[0]
+        del queue[0]					
+        for i in range(4):				
+            x = a + dx[i]				
+            y = b + dy[i]
+            if 0<=x<n and 0<=y<m and s[x][y]==1:#3
+                queue.append([x, y])	
+                s[x][y] = s[a][b]+1#4
+    return s[n - 1][m - 1]	
 
-print(bfs(s))	
+print(bfs(s))
 ```
 
+1. `s = [list(map(int,input())) for _ in range(n)]`에서 입력받는 수를 int 형식으로 변환해야함->앞으로 나올 코드가 이동횟수를 누적하는 방식이기 때문에 연산 가능한 int 형식이 필요하다
+2. `queue = [[0, 0]]` 에서 이중 리스트를 취하는 이유는 뒤에 `del queue[0]`을 사용하기 때문. 큐를 비우기 위해서 del을 사용하는데, 이 때 이중 리스트가 아니면 큐 자체가 삭제되기 때문에 이중 리스트를 취해야 한다
+3. `if 0<=x<n and 0<=y<m and s[x][y]==1:`는 x와 y가 n과 m 범위 안에 있을 때, 통과할 수 있는지를 탐색한다. 이 때, `s[x][y]>0`이 아니라 `s[x][y]==1`인 이유는 1보다 클 경우는 누적된 값이 존재한다는 의미이며 이는 <u>이미 탐색을 마친 좌표를 의미</u>하기 때문. 누적값이 1이 되는 경우는 없다(이미 1인 값에 경로를 더해주기 때문)
+4. `s[x][y]=s[a][b]+1`은 경로 누적을 의미한다. (예: 총 3칸 이동한 상황에서 1이 등장하면 해당 칸의 값은 4가 된다)
